Fixed issue with whole page turning red. Aligned an edit icon on the ingredient card.

--- a/app/assets/stylesheets/components/_pantry_card.scss
+++ b/app/assets/stylesheets/components/_pantry_card.scss
@@ -1,9 +1,12 @@
+
+
 .card{
   padding:5px 12px;
   background-color: white;
   border: none;
   margin: 4px;
-  border-radius: 8px;
+  border-radius: 16px;
+  position: relative;
 }
 
 .card-title{
@@ -26,6 +29,12 @@
   border-radius: 8px;
 }
 
+.edit-icon{
+  position: absolute;
+  right: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+}
 /*
 .card-date{
 }
